--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
             flex-direction: row;
             justify-content: end;
             background-color: #FF6F61;
+            flex-wrap: wrap;
         }
         .home{
             display: flex;
             flex-direction: row;
             gap: 2em;
-            padding-right: 80em ;
+            padding-right: 80em;
+            flex-wrap: wrap;
         }
         .container1{
             display: flex;
@@ -26,6 +28,7 @@
             gap: 10em;
             padding-left: 23em;
             padding-top: 3em;
+            flex-wrap: wrap;
         }
         .container2{
             display: flex;
@@ -34,6 +37,7 @@
             gap: 10em;
             padding-left: 23em;
             padding-top: 3em;
+            flex-wrap: wrap;
         }
         .container3{
             display: flex;
@@ -42,6 +46,7 @@
             gap: 10em;
             padding-left: 23em;
             padding-top: 3em;
+            flex-wrap: wrap;
         }
         .fotter{
             display: flex;
@@ -50,6 +55,7 @@
             background-color: #E6C49F;
             padding: 1.5em;
             margin-top: 3em;
+            flex-wrap: wrap;
         }
         .alinharcard{
             text-align: center;
@@ -67,6 +73,7 @@
             padding-right: 6em;
             margin-left: 22em;
             margin-right: 21em;
+            flex-wrap: wrap;
         }
         .btn.btn-secondary.dropdown-toggle{ /* Parte do usuário */
             background: none;
