--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         .header{
             display: flex;
             flex-direction: row;
-            justify-content: end;
+            justify-content: space-between;
             background-color: #FF6F61;
         }
         .home{
@@ -47,7 +47,7 @@
             padding-top: 3em;
             flex-wrap: wrap;
         }
-        .fotter{
+        .footer{
             display: flex;
             flex-direction: row;
             justify-content: center;
@@ -70,8 +70,8 @@
             flex-direction: row;
             padding-left: 6em;
             padding-right: 6em;
-            margin-left: 22em;
-            margin-right: 21em;
+            max-width: 80%;
+            margin: auto;
             flex-wrap: wrap;
         }
         .btn.btn-secondary.dropdown-toggle{ /* Parte do usuário */
@@ -246,7 +246,7 @@
         </div>
         
     </section> <!--Fotter-->
-    <footer class="fotter">
+    <footer class="footer">
         <div><strong>Sobre nós</strong></div>
     </footer>
     
