flex-wrap, adc cart

--- a/index.html
+++ b/index.html
@@ -136,8 +136,9 @@
                 <br>
                 <br>
                 <div class="alinhardesc">Um caldo rico e saboroso feito com pasta de miso, oferecendo um equilíbrio perfeito entre umami e cremosidade.</div>
+                <div style="text-align: justify;"> R$ 40,00</div>
                 <br>
-                <a href="#" class="btn btn-primary">Comprar por R$ 40,00</a>
+                <a href="#" class="btn btn-primary">Adicionar ao carrinho</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
@@ -147,8 +148,9 @@
                 <br>
                 <br>
                 <div class="alinhardesc">Clássico e equilibrado, este ramen tem um caldo à base de molho de soja, proporcionando um sabor levemente salgado e profundo.</div>
+                <div style="text-align: justify;"> R$ 35,00</div>
                 <br>
-                <a href="#" class="btn btn-primary">Comprar por R$35,00</a>
+                <a href="#" class="btn btn-primary">Adicionar ao carrinho</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
@@ -158,8 +160,9 @@
                 <br>
                 <br>
                 <div class="alinhardesc">Um caldo espesso e encorpado feito a partir de ossos de porco cozidos por horas, resultando em um sabor intenso e cremoso.</div>
+                <div style="text-align: justify;"> R$ 50,00</div>
                 <br>
-                <a href="#" class="btn btn-primary">Comprar por R$50,00</a>
+                <a href="#" class="btn btn-primary">Adicionar ao carrinho</a>
                 </div>
             </div>
         </main>
@@ -173,8 +176,9 @@
                 <br>
                 <br>
                 <div class="alinhardesc"> Uma versão mais leve e delicada, com um caldo à base de sal marinho que realça o sabor natural dos ingredientes.</div>
+                <div style="text-align: justify;">R$ 35,00</div>
                 <br>
-                <a href="#" class="btn btn-primary">Comprar por R$35,00</a>
+                <a href="#" class="btn btn-primary">Adicionar ao carrinho</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
@@ -184,8 +188,9 @@
                 <br>
                 <br>
                 <div class="alinhardesc">Um ramen especial servido com generosas fatias de chashu (porco assado), trazendo um sabor defumado e suculento ao prato.</div>
+                <div style="text-align: justify;">R$ 50,00</div>
                 <br>
-                <a href="#" class="btn btn-primary">Comprar por R$50,00</a>
+                <a href="#" class="btn btn-primary">Adicionar ao carrinho</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
@@ -195,8 +200,9 @@
                 <br>
                 <br>
                 <div class="alinhardesc">Uma variação exclusiva com ingredientes selecionados e um toque especial da casa, garantindo um sabor único.</div>
+                <div style="text-align: justify;">R$ 60,00</div>
                 <br>
-                <a href="#" class="btn btn-primary">Comprar por R$60,00</a>
+                <a href="#" class="btn btn-primary">Adicionar ao carrinho</a>
                 </div>
             </div>
         </main>
@@ -210,8 +216,9 @@
                 <br>
                 <br>
                 <div class="alinhardesc">O favorito do Naruto, este ramen leva ingredientes extras como fatias de narutomaki, ovo cozido e um caldo bem temperado.</div>
+                <div style="text-align: justify;">R$ 40,00</div>
                 <br>
-                <a href="#" class="btn btn-primary">Comprar por R$40,00</a>
+                <a href="#" class="btn btn-primary">Adicionar ao carrinho</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
@@ -221,9 +228,10 @@
                 <br>
                 <br>
                 <div class="alinhardesc">Uma combinação irresistível de milho doce e manteiga derretida em um caldo quente e aromático.</div>
+                <div style="text-align: justify;">R$ 40,00</div>
                 <br>
                 <br>
-                <a href="#" class="btn btn-primary">Comprar por R$40,00</a>
+                <a href="#" class="btn btn-primary">Adicionar ao carrinho</a>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
@@ -233,9 +241,10 @@
                 <br>
                 <br>
                 <div class="alinhardesc">Para os amantes de pimenta, este ramen traz um toque apimentado e picante que esquenta o paladar.</div>
+                <div style="text-align: justify;">R$ 45,00</div>
                 <br>
                 <br>
-                <a href="#" class="btn btn-primary">Comprar por R$45,00</a>
+                <a href="#" class="btn btn-primary">Adicionar ao carrinho</a>
                 </div>
             </div>
         </main>
