--- a/login.html
+++ b/login.html
@@ -21,6 +21,7 @@
             padding-top: 5em;
             padding-bottom: 5em;
             background-color: burlywood;
+            flex-wrap: wrap;
         }
         .fonte{
             font-weight: bolder;
