--- a/login.html
+++ b/login.html
@@ -7,21 +7,27 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="lastapage" href="index.html">
     <style>
-        .login{
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            gap: 0px;
-            margin-top: 10em;
-            margin-bottom: 10em;
-            margin-left: 33em;
-            margin-right: 33em;
-            padding-right: 11em;
-            padding-left: 11em;
-            padding-top: 5em;
-            padding-bottom: 5em;
-            background-color: burlywood;
-            flex-wrap: wrap;
+        .login {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: burlywood;
+        flex-wrap: wrap;
+        width: 50%;
+        height: auto;
+        padding: 2em;
+        /* centralização */
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border-radius: 10px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+        .login input{
+            width: 30em;
+            height: auto;
         }
         .fonte{
             font-weight: bolder;
@@ -30,6 +36,7 @@
         .fontea{
             font-size: 1em !important;
             color: black !important;
+           
         }
     </style>
 </head>
@@ -42,7 +49,7 @@
     <div class="login">
         <div class="form-group">
             <label for="exampleFormControlInput1" class="fonte">Nome do usuário</label>
-            <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Digite seu nome">
+            <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Digite seu nome" >
         </div>
         <div class="form-group">
           <label for="exampleInputEmail1" class="fonte">Endereço de email</label>
