--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
     <header class="header"> <!--Header esquerda-->
         <section class="home"> <!--Header usuário-->
-            <div style="padding-top: 0.5em;"><img src="img/home-icon-vector.jpg" alt="home" style="max-width: 100%; height: 90px;"></div>
+            <a href="index.html"><img src="img/home-icon-vector.jpg" alt="home" style="max-width: 100%; height: 90px;padding-top: 0.5em;"></a>
             <div style="padding-top: 1em;font-size: 30px;"><strong>Ichiraku's Ramem</strong></div>
         </section>
             <div class="home"> <!--Usuário-->
@@ -117,8 +117,7 @@
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                       <a class="dropdown-item" href="login.html">Login</a>
-                      <a class="dropdown-item" href="#">Sobre nós</a>
-                      <a class="dropdown-item" href="#">Logout</a>
+                      <a class="dropdown-item" href="sobrenos.html">Sobre nós</a>
                     </div>
                   </div>
             </div>
@@ -259,7 +258,7 @@
         
     </section> <!--Fotter-->
     <footer class="footer">
-        <div><strong>Sobre nós</strong></div>
+        <div><strong>Ichiraku's ramen</strong></div>
     </footer>
     
 
