--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
         align-items: center;
         background-color: burlywood;
         flex-wrap: wrap;
-        width: 50%;
+        max-width: 100%;
         height: auto;
         padding: 2em;
         /* centralização */
