--- a/index.html
+++ b/index.html
@@ -24,27 +24,27 @@
         .container1{
             display: flex;
             flex-direction: row;
-            justify-content: flex-start;
+            justify-content: center;
+            align-items: center;
             gap: 10em;
-            padding-left: 23em;
             padding-top: 3em;
             flex-wrap: wrap;
         }
         .container2{
             display: flex;
             flex-direction: row;
-            justify-content: flex-start;
+            justify-content: center;
+            align-items: center;
             gap: 10em;
-            padding-left: 23em;
             padding-top: 3em;
             flex-wrap: wrap;
         }
         .container3{
             display: flex;
             flex-direction: row;
-            justify-content: flex-start;
+            justify-content: center;
+            align-items: center;
             gap: 10em;
-            padding-left: 23em;
             padding-top: 3em;
             flex-wrap: wrap;
         }
