--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             justify-content: center;
             background-color: #FF6F61;
             flex-wrap: wrap;
+            margin-bottom: 3%;
         }
         .home{
             display: flex;
@@ -27,7 +28,6 @@
             justify-content: center;
             align-items: center;
             gap: 10em;
-            padding-top: 3em;
             flex-wrap: wrap;
         }
         .container2{
